INScore originates from the Interlude project.
It has been supported by the ANR 
(ANR-08-CORD-010 - ANR-12-CORD-0009)
====================================================

----------------------------------------------------
Version 1.24
- new inscore2 scripting language
- colors: supports html color names and hex values with 0x as prefix
- supports absolute time segments in mappings

----------------------------------------------------
Version 1.23
- update to guido engine 1.66
- update to Qt 5.12.1
- edit message: 
  supports 'set' as argument
  new 'reset' argument to clear the edit string in the object cache
- new dshear method
- fix bug with javascript runtime variable (passed as argument to run)
- fix synchronization issue with arcs (not visible when synchronized)
- fix crash bug with 'set' messages addressed to /ITL/*/anobject

----------------------------------------------------
Version 1.22
- new opengl message supported at scene level for optional OpenGl graphics rendering 
  improves significantly the cpu use for graphics operations but at the cost of dirty rendering
  for text and symbolic scores 
- fix potential issue with dates: dates expressed with big values for the numerator or the 
  denominator may result in overflow

----------------------------------------------------
Version 1.21 - 2017-01-12
- new set of sensor objects 
- update to guido engine 1.63
- new 'preprocess' message supported at application and scene level
  intended to debug javascript sections or math expressions
  output of pre-processing is printed to the log window
- environement variables introduced in scripting environment (OSName and OSId)
- new math expressions introduced in scripting context

----------------------------------------------------
Version 1.20
- new 'syncFrame' synchronisation mode.
- the 'events' system has been extended to any object attribute and supports user defined events.