@@ -16,6 +16,7 @@ Version 1.24
 - new inscore2 scripting language
 - colors: supports html color names and hex values with 0x as prefix
 - supports absolute time segments in mappings
+- tempo is now a floating point value
 
 ----------------------------------------------------
 Version 1.23
